[package]
name = "my_raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#prost     = { version = "0.7", default-features = false, features = ["prost-derive"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.1"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.27.0", features = ["full"] }
actix-rt = "1.1.1"
